Name:                stats-web
Version:             0.1
Synopsis:            Simple Web Stats Interface
Homepage:            http://bu.mp
License:             AllRightsReserved
License-file:        LICENSE
Author:              Bump Technologies, Inc
Maintainer:          dev@bu.mp
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.8


Library
  Exposed-modules:     Network.StatsWeb

  Build-depends: base >=4 && <5,
                 stm >= 2.2,
                 mtl,
                 text,
                 scotty,
                 aeson,
                 containers,
                 text-format

  Extensions:    ScopedTypeVariables,OverloadedStrings
  ghc-options:   -O2 -Wall


Executable stats_web_test
  Main-is: Network/StatsWeb/Test.hs

  Build-depends: base >=4 && <5,
                 stm >= 2.2,
                 mtl,
                 text,
                 scotty,
                 aeson,
                 containers,
                 text-format

  Other-Modules: Network.StatsWeb
  Extensions:    OverloadedStrings
  ghc-options:   -O2
